--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
                crossorigin="anonymous"
                referrerpolicy="no-referrer"
           />
-          <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
           <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
           <link rel="preconnect" href="https://fonts.googleapis.com" />
           <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,5 +30,34 @@
      <body>
           <noscript>You need to enable JavaScript to run this app.</noscript>
           <div id="root"></div>
+          <!-- Messenger Plugin chat Code -->
+          <div id="fb-root"></div>
+
+          <!-- Your Plugin chat code -->
+          <div id="fb-customer-chat" class="fb-customerchat"></div>
+
+          <script>
+               var chatbox = document.getElementById("fb-customer-chat");
+               chatbox.setAttribute("page_id", "108356731646466");
+               chatbox.setAttribute("attribution", "biz_inbox");
+
+               window.fbAsyncInit = function () {
+                    FB.init({
+                         xfbml: true,
+                         version: "v12.0",
+                    });
+               };
+
+               (function (d, s, id) {
+                    var js,
+                         fjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id)) return;
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src =
+                         "https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js";
+                    fjs.parentNode.insertBefore(js, fjs);
+               })(document, "script", "facebook-jssdk");
+          </script>
      </body>
 </html>
